Store the test results in the correct folder

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,4 @@ jobs:
           name: Run the gradle test
           command: gradle test
       - store_test_results:
-          path: test-results
+          path: build/test-results
