--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,5 +8,11 @@ jobs:
       - run:
           name: Run the gradle test
           command: gradle test
+      - run:
+          name: Run the gradle jar build
+          command: gradle jar
       - store_test_results:
           path: build/test-results
+      - store_artifacts:
+          path: build/libs
+          destination: prefix
