Dockerizing added to circleci workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,16 @@ jobs:
       - store_artifacts:
           path: build/libs
           destination: prefix
+  dockerize:
+    machine: true
+    steps:
+      - checkout
+      # Login to docker
+      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
+      # build the application image
+      - run: docker build -t leonsn/circleci-test-app:$CIRCLE_SHA1 .
+      # deploy the image
+      - run: docker push leonsn/circleci-test-app:$CIRCLE_SHA1
 workflows:
   version: 2
   test_and_package_flow:
@@ -29,3 +39,9 @@ workflows:
       - package:
           requires:
             - test
+      - dockerize:
+          requires:
+            - test
+          filters:
+            branches:
+              only: master
